kube/k8s-resources.yaml
apiVersion: v1
kind: Service
metadata:
  name: obp-directory
  labels:
    app: obp-directory
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8000
  selector:
    app: obp-directory
    version: v1
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: obp-directory
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: obp-directory
        version: v1
    spec:
      containers:
      - args:
          - gunicorn
          - -c
          - python:config.gunicorn
          - directory.app:create_app()
        name: obp-directory
        image: docker.io/bambebo/obp-directory:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /_status/health
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /_status/health
            port: 8000
          initialDelaySeconds: 40
          periodSeconds: 5
        resources:
          requests:
            memory: "250Mi"
            cpu: "250m"
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/proxy-buffers: "128k"
    nginx.org/proxy-buffer-size: "4 256k"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    ingress.kubernetes.io/proxy-body-size: 500m
  labels:
    app: obp-directory
  name: obp-directory
spec:
  tls:
    - hosts:
      - rcs.dpe-opendata.com
      secretName: rcs.dpe-opendata.com
  rules:
    - host: rcs.dpe-opendata.com
      http:
        paths:
        - backend:
            serviceName: obp-directory
            servicePort: 8080
          path: /*
